@@ -5,9 +5,9 @@ package Getopt::Long;
 # RCS Status      : $Id: GetoptLong.pl,v 2.22 2000-03-05 21:08:03+01 jv Exp $
 # Author          : Johan Vromans
 # Created On      : Tue Sep 11 15:00:12 1990
-# Last Modified By: Johan Vromans
-# Last Modified On: Sun Mar  5 21:08:55 2000
-# Update Count    : 720
+# Last Modified By: Johan Vromans CPWR
+# Last Modified On: Mon Mar  6 09:22:25 2000
+# Update Count    : 722
 # Status          : Released
 
 ################ Copyright ################
@@ -100,74 +100,70 @@ sub ConfigDefaults () {
 
 ConfigDefaults();
 
-################ Object Oriented routines ################
-
-=experimental
-
-# NOTE: The object oriented routines use $error for thread locking.
-eval "sub lock{}" if $] < 5.005;
-
-# Store a copy of the default configuration. Since ConfigDefaults has
-# just been called, what we get from Configure is the default.
-my $default_config = do { lock ($error); Configure () };
-
-sub new {
-    my $that = shift;
-    my $class = ref($that) || $that;
-
-    # Register the callers package.
-    my $self = { caller => (caller)[0] };
-
-    bless ($self, $class);
-
-    # Process construct time configuration.
-    if ( @_ > 0 ) {
-	lock ($error);
-	my $save = Configure ($default_config, @_);
-	$self->{settings} = Configure ($save);
-    }
-    # Else use default config.
-    else {
-	$self->{settings} = $default_config;
-    }
-
-    $self;
-}
-
-sub configure {
-    my ($self) = shift;
-
-    lock ($error);
-
-    # Restore settings, merge new settings in.
-    my $save = Configure ($self->{settings}, @_);
-
-    # Restore orig config and save the new config.
-    $self->{settings} = Configure ($save);
-}
-
-sub getoptions {
-    my ($self) = shift;
-
-    lock ($error);
-
-    # Restore config settings.
-    my $save = Configure ($self->{settings});
-
-    # Call main routine.
-    my $ret = 0;
-    $caller = $self->{caller};
-    eval { $ret = GetOptions (@_); };
-
-    # Restore saved settings.
-    Configure ($save);
-
-    # Handle errors and return value.
-    die ($@) if $@;
-    return $ret;
-}
-
-=cut
+# ################ Object Oriented routines ################
+# 
+# # NOTE: The object oriented routines use $error for thread locking.
+# eval "sub lock{}" if $] < 5.005;
+# 
+# # Store a copy of the default configuration. Since ConfigDefaults has
+# # just been called, what we get from Configure is the default.
+# my $default_config = do { lock ($error); Configure () };
+# 
+# sub new {
+#     my $that = shift;
+#     my $class = ref($that) || $that;
+# 
+#     # Register the callers package.
+#     my $self = { caller => (caller)[0] };
+# 
+#     bless ($self, $class);
+# 
+#     # Process construct time configuration.
+#     if ( @_ > 0 ) {
+# 	lock ($error);
+# 	my $save = Configure ($default_config, @_);
+# 	$self->{settings} = Configure ($save);
+#     }
+#     # Else use default config.
+#     else {
+# 	$self->{settings} = $default_config;
+#     }
+# 
+#     $self;
+# }
+# 
+# sub configure {
+#     my ($self) = shift;
+# 
+#     lock ($error);
+# 
+#     # Restore settings, merge new settings in.
+#     my $save = Configure ($self->{settings}, @_);
+# 
+#     # Restore orig config and save the new config.
+#     $self->{settings} = Configure ($save);
+# }
+# 
+# sub getoptions {
+#     my ($self) = shift;
+# 
+#     lock ($error);
+# 
+#     # Restore config settings.
+#     my $save = Configure ($self->{settings});
+# 
+#     # Call main routine.
+#     my $ret = 0;
+#     $caller = $self->{caller};
+#     eval { $ret = GetOptions (@_); };
+# 
+#     # Restore saved settings.
+#     Configure ($save);
+# 
+#     # Handle errors and return value.
+#     die ($@) if $@;
+#     return $ret;
+# }
 
 ################ Package return ################
 
